# realsense-frame

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
example/sample_capture/session_20260206_140243/: config.json  imu.jsonl
example/sample_capture/session_20260206_140243/frame_00000_20260206_140250_405956/: depth.zst  imu.jsonl  metadata.json
example/sample_capture/session_20260206_140243/frame_00001_20260206_140252_842705/: depth.zst  imu.jsonl  metadata.json
example/sample_capture/session_20260206_140243/frame_00002_20260206_140255_041297/: depth.zst  imu.jsonl  metadata.json
example/sample_capture/session_20260206_140243/frame_00003_20260206_140257_102411/: depth.zst  imu.jsonl  metadata.json
example/sample_capture/session_20260206_140243/frame_00004_20260206_140259_161182/: depth.zst  imu.jsonl  metadata.json
example/sample_capture/session_20260206_140243/frame_00005_20260206_140301_241643/: depth.zst  imu.jsonl  metadata.json
notebooks/: getting_started.ipynb
src/realsense_frame/: capture.py  cli.py  loader.py  stability.py  utils.py  visualizer.py
tests/: test_stability.py
