[project]
name = "realsense-frame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyrealsense2",
    "numpy",
    "opencv-python",
    "zstandard>=0.25.0",
    "toml>=0.10.2",
    "pytest>=9.0.2",
    "realsense-align>=0.1.4",
    "click",
    "loguru",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
realsense-align = { git = "https://github.com/mlouielu/realsense-align", rev = "add-extrinsic" }

[project.scripts]
realsense-frame-capture = "realsense_frame.capture:main"
realsense-frame-visualizer = "realsense_frame.visualizer:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
